[tool.poetry]
name = "quictunnel_server"
version = "0.1.0"
description = "Tunnel to localhost via quic"
authors = ["Roshan Jobanputra <roshan@jobanp.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"
aioquic = "^0.9.20"
starlette = "^0.21.0"
uvicorn = "^0.19.0"
structlog = "^22.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
