[tool.poetry]
name = "quictunnel_server"
version = "0.1.0"
description = "Tunnel to localhost via quic"
authors = ["Roshan Jobanputra <roshan@jobanp.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"
aioquic = "^0.9.20"
starlette = "^0.21.0"
uvicorn = "^0.19.0"
structlog = "^22.3.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
isort = "^5.11.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Set up pytest-asyncio to automatically detect async tests & fixtures
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
preview = true
line_length = 88